[Storefront] Enhance to automatically fill the default shipping address on Storefront